--- a/Cinema.Web/appsettings.json
+++ b/Cinema.Web/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
   "SeedSettings": {
     "ImageSource": "App_Data/SampleImages"
   }
