ReservationController, Reservation views, Reservation models

--- a/Cinema.Web/appsettings.json
+++ b/Cinema.Web/appsettings.json
@@ -12,5 +12,8 @@
   "SeedSettings": {
     "ImageSource": "App_Data/SampleImages"
   },
-  "NewMovieCount": 5
+  "NewMovieCount": 5,
+  "ReservationSettings": {
+    "MaximumNumberOfSeats": 6
+  }
 }
