React client, test project, email functionality

--- a/Cinema.Web/appsettings.json
+++ b/Cinema.Web/appsettings.json
@@ -15,5 +15,13 @@
   "NewMovieCount": 5,
   "ReservationSettings": {
     "MaximumNumberOfSeats": 6
+  },
+  "EmailSettings": {
+    "Host": "",
+    "Port": 0,
+    "EnableSsl": true,
+    "UserName": "",
+    "Password": "",
+    "FromEmail":  ""
   }
 }
